fix: align pagination with received sms

--- a/src/views/sent_sms_list/Pagination.module.css
+++ b/src/views/sent_sms_list/Pagination.module.css
@@ -1,6 +1,5 @@
 .container {
     display: flex;
-    padding: 24px 0;
     font-size: 14px;
 }
 
